k8s/overlays/prod/second-step/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudnotes-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cloudnotes.143.198.207.43.nip.io # Change this to your desired domain
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-nginx
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
